src/objects/ContractAppSWBUNDLE__c.object
<CustomObject>
    <description>This is the behind-the-scenes reporting object that links up all SW Bundles to Applications to Contracts.  We can utilize this object in reports and dashboards to identify applications with missing contracts, etc...  Also at a glance, we can see per SW Bundle, all the apps associated with it, and the pertinent contracts.  This object is a flat file, uploaded back into SFDC from MS Access, via Informatica Sync.  Original raw data is initially taken from SFDC itself.  This object is not used in SFDC direct entry, nor should it be listed in Tabs.  For reporting purposes ONLY.</description>
    <fields>
        <fullName>AccountName_Full__c</fullName>
        <label>AccountName_Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ContractAppSWBUNDLES</relationshipLabel>
        <relationshipName>ContractAppSERVICES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <label>AccountOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Android__c</fullName>
        <label>Android</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppName_Full__c</fullName>
        <label>AppName_Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AppName</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>ContractAppSERVICES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Category__c</fullName>
        <label>App_Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Type__c</fullName>
        <label>App_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <label>ContractName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber_Full__c</fullName>
        <label>ContractNumber_Full</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractNumber</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>ContractAppSWBUNDLES</relationshipLabel>
        <relationshipName>ContractAppSERVICES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractOwner__c</fullName>
        <label>ContractOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhase__c</fullName>
        <label>ContractPhase</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <label>ContractStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Governing__c</fullName>
        <label>Governing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LRB_Date__c</fullName>
        <label>LRB_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LRB_PipelineID__c</fullName>
        <label>LRB_PipelineID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <description>Last refresh of data via IOD</description>
        <label>Last_Refresh</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRE_Cost__c</fullName>
        <label>NRE_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Apps__c</fullName>
        <label>No_of_Apps</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevShareApp__c</fullName>
        <label>RevShareApp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevShareDetails__c</fullName>
        <label>RevShareDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoyaltyDescr__c</fullName>
        <label>RoyaltyDescr</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoyaltyHigh__c</fullName>
        <label>RoyaltyHigh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoyaltyLow__c</fullName>
        <label>RoyaltyLow</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFID_Application__c</fullName>
        <label>SFID_Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID_Contract__c</fullName>
        <label>SFID_Contract</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID_Service__c</fullName>
        <label>SFID_Service</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWBundle_Full__c</fullName>
        <label>SWBundle_Full</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWBundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SWBundle</label>
        <referenceTo>SW_Bundle__c</referenceTo>
        <relationshipName>ContractAppSERVICES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceDescr__c</fullName>
        <label>ServiceDescr</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique_ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ContractAppSWBUNDLE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ContractAppSWBUNDLE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContractAppSWBUNDLES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>